--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.ebang.frontend</groupId>
-    <artifactId>gateway</artifactId>
+    <artifactId>salt</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>gateway</name>
-    <description>Demo project for Spring Boot</description>
+    <name>salt</name>
+    <description>Proxy of front end</description>
     <properties>
         <java.version>8</java.version>
     </properties>
